syntax = "proto3";

package spinnaker;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.orca.proto.execution";

import "google/protobuf/any.proto";

service ExecutionService {
  rpc start (ExecutionRequest) returns (ExecutionResponse);
}

message ExecutionRequest {
  string id = 1;
  string application = 2;
  string name = 3;
  google.protobuf.Any trigger = 4;
  repeated google.protobuf.Any stages = 5;
}

message ExecutionResponse {
  string id = 1;
}
