syntax = "proto3";

package io.spinnaker;

option java_multiple_files = true;
option java_package = "com.netflix.spinnaker.orca.proto.execution";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
import "notification.proto";

message Trigger {
  string user = 1;
  google.protobuf.Struct parameters = 2;
  repeated spinnaker.Notification notifications = 3;
  google.protobuf.Any spec = 4;
}

message ManualTrigger {
  string correlationId = 2;
}

message JenkinsTrigger {
  string master = 1;
  string job = 2;
  string buildNumber = 3;
}
